--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/build.gradle
@@ -8,7 +8,19 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
-apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
+repositories {
+  if (isUsingArtifactory) { 
+    maven { 
+      credentials { 
+        username userProps.getProperty("artifactory.download.user") 
+        password userProps.getProperty("artifactory.download.token")    
+      } 
+      url ("https://" + gradle.userProps.getProperty("artifactory.download.server") + "/artifactory/wasliberty-maven-remote")   
+    }   
+  } else {  
+    mavenCentral()  
+  } 
+}
 
 configurations {
   reactivex
