--- a/dev/com.ibm.ws.jbatch.open_fat/.project
+++ b/dev/com.ibm.ws.jbatch.open_fat/.project
@@ -10,8 +10,26 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>bndtools.core.bndbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>bndtools.core.bndnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>com.ibm.ws.jbatch.common_fat-BonusPayout</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/com.ibm.ws.jbatch.common_fat/test-applications/BonusPayout.war/src</locationURI>
+		</link>
+		<link>
+			<name>com.ibm.ws.jbatch.common_fat-DbServletApp</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/com.ibm.ws.jbatch.common_fat/test-applications/DbServletApp.war/src</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
