--- a/dev/com.ibm.ws.jbatch.open_fat/.classpath
+++ b/dev/com.ibm.ws.jbatch.open_fat/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="fat/src"/>
 	<classpathentry kind="src" path="test-applications/batchSecurity.war/src"/>
 	<classpathentry kind="src" path="test-applications/batchFAT.war/src"/>
-	<classpathentry kind="src" path="com.ibm.ws.jbatch.common_fat-BonusPayout"/>
-	<classpathentry kind="src" path="com.ibm.ws.jbatch.common_fat-DbServletApp"/>
+	<classpathentry kind="src" path="com.ibm.ws.jbatch.fat.common-BonusPayout"/>
+	<classpathentry kind="src" path="com.ibm.ws.jbatch.fat.common-DbServletApp"/>
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
