add rest-config-validation to jakartaee 9

--- a/dev/com.ibm.ws.rest.handler.validator_fat/build.gradle
+++ b/dev/com.ibm.ws.rest.handler.validator_fat/build.gradle
@@ -8,7 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
-
+//addRequiredLibraries.dependsOn addJakartaTransformer
 addRequiredLibraries.dependsOn addDerby
 
 dependencies {
