--- a/dev/com.ibm.ws.jaxrs.2.1.client_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.1.client_fat/build.gradle
@@ -66,6 +66,7 @@ dependencies {
   mockserver 'ch.qos.logback:logback-classic:1.1.3'
   mockserver 'janino:janino:2.5.10'
   mockserver 'org.mock-server:mockserver-logging:3.10.7'
+  mockserver 'ch.qos.logback:logback-core:1.1.3'
   mockserver project(':io.openliberty.com.fasterxml.jackson')
   mockserver 'com.github.fge:json-schema-validator:2.2.6'
   mockserver 'com.jcraft:jzlib:1.1.3'
