MP Rest Client 2.0 SSE FAT Tests

--- a/dev/com.ibm.ws.microprofile.rest.client_fat/build.gradle
+++ b/dev/com.ibm.ws.microprofile.rest.client_fat/build.gradle
@@ -12,6 +12,7 @@
 configurations {
   johnzon
   jsonbapi
+  reactivestreams
 }
 
 dependencies {
@@ -19,6 +20,7 @@ dependencies {
     'org.apache.johnzon:johnzon-jsonb:1.1.8',
     'org.apache.johnzon:johnzon-mapper:1.1.8'
   jsonbapi 'javax.json.bind:javax.json.bind-api:1.0'
+  reactivestreams 'org.reactivestreams:reactive-streams:1.0.3'
 }
 
 task addJohnzon(type: Copy) {
@@ -31,7 +33,13 @@ task addJsonBApi(type: Copy) {
   into "${buildDir}/autoFVT/publish/files/jsonbapi/"
 }
 
+task addReactiveStreams(type: Copy) {
+  from configurations.reactivestreams
+  into "${buildDir}/autoFVT/publish/files/reactivestreams/"
+}
+
 addRequiredLibraries {
   dependsOn addJohnzon
   dependsOn addJsonBApi
+  dependsOn addReactiveStreams
 }
