Updates to get xmlWS working more
- Updates to get xml files to parse correctly
- Transformation updates for both soap and jaxb
- Transform com.ibm.ws.jaxws.tools
- Updates to do proper replacement for jaxws-2.2 when doing EE9 testing

Code review changes

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -94,3 +94,18 @@ javax.enterprise.context.Dependent=jakarta.enterprise.context.Dependent
 # xmlBinding-3.0 Context properties
 com.sun.xml.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
 com.sun.xml.internal.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
+
+http\://java.sun.com/xml/ns/jaxb=https://jakarta.ee/xml/ns/jaxb
+
+javax.jws.WebService=jakarta.jws.WebService
+javax.jws.HandlerChain=jakarta.jws.HandlerChain
+
+javax.xml.ws.WebServiceProvider=jakarta.xml.ws.WebServiceProvider
+javax.xml.ws.soap.MTOM=jakarta.xml.ws.soap.MTOM
+javax.xml.ws.soap.Addressing=jakarta.xml.ws.soap.Addressing
+javax.xml.ws.RespectBinding=jakarta.xml.ws.RespectBinding
+javax.xml.ws.BindingType=jakarta.xml.ws.BindingType
+javax.xml.ws.ServiceMode=jakarta.xml.ws.ServiceMode
+
+com.sun.xml.bind.v2.ContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
+com.ibm.xml.xlxp2.jaxb.JAXBContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
