--- a/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
@@ -126,9 +126,22 @@ org.apache.myfaces.shared.util=[3.0,4)
 org.apache.myfaces.spi=[3.0,4)
 org.apache.myfaces.util=[3.0,4)
 org.apache.myfaces.webapp=[3.0,4)
-org.glassfish.jaxb=[3.0,4)
-org.glassfish.jaxb.runtime.v2=[3.0,4)
+org.glassfish.jaxb.runtime=[3.0,4)
 org.glassfish.jaxb.runtime.api=[3.0,4)
+org.glassfish.jaxb.core.api.impl=[3.0,4)
+org.glassfish.jaxb.core.marshaller=[3.0,4)
+org.glassfish.jaxb.core.unmarshaller=[3.0,4)
+org.glassfish.jaxb.runtime.util=[3.0,4)
+org.glassfish.jaxb.core.v2.model.nav=[3.0,4)
+org.glassfish.jaxb.runtime.v2=[3.0,4)
+org.glassfish.jaxb.runtime.v2.model.annotation=[3.0,4)
+org.glassfish.jaxb.runtime.v2.model.runtime=[3.0,4)
+org.glassfish.jaxb.runtime.v2.runtime=[3.0,4)
+org.glassfish.jaxb.runtime.v2.runtime.unmarshaller=[3.0,4)
+org.glassfish.jaxb.runtime.v2.schemagen=[3.0,4)
+org.glassfish.jaxb.runtime.v2.schemagen.xmlschema=[3.0,4)
+org.glassfish.jaxb.runtime.v2.util=[3.0,4)
+org.glassfish.jaxb=[3.0,4)
 org.hibernate.validator=[7.0,8)
 org.hibernate.validator.cdi.internal=[7.0,8)
 org.hibernate.validator.cdi=[7.0,8)
