--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -1,5 +1,18 @@
-com.sun.xml.bind.v2=org.glassfish.jaxb.runtime.v2
+com.sun.xml.bind=org.glassfish.jaxb.runtime
 com.sun.xml.bind.api=org.glassfish.jaxb.runtime.api
+com.sun.xml.bind.api.impl=org.glassfish.jaxb.core.api.impl
+com.sun.xml.bind.marshaller=org.glassfish.jaxb.core.marshaller
+com.sun.xml.bind.unmarshaller=org.glassfish.jaxb.core.unmarshaller
+com.sun.xml.bind.util=org.glassfish.jaxb.runtime.util
+com.sun.xml.bind.v2=org.glassfish.jaxb.runtime.v2
+com.sun.xml.bind.v2.model.annotation=org.glassfish.jaxb.runtime.v2.model.annotation
+com.sun.xml.bind.v2.model.nav=org.glassfish.jaxb.core.v2.model.nav
+com.sun.xml.bind.v2.model.runtime=org.glassfish.jaxb.runtime.v2.model.runtime
+com.sun.xml.bind.v2.runtime=org.glassfish.jaxb.runtime.v2.runtime
+com.sun.xml.bind.v2.runtime.unmarshaller=org.glassfish.jaxb.runtime.v2.runtime.unmarshaller
+com.sun.xml.bind.v2.schemagen=org.glassfish.jaxb.runtime.v2.schemagen
+com.sun.xml.bind.v2.schemagen.xmlschema=org.glassfish.jaxb.runtime.v2.schemagen.xmlschema
+com.sun.xml.bind.v2.util=org.glassfish.jaxb.runtime.v2.util
 com.sun.xml.internal.bind=org.glassfish.jaxb
 
 javax.activation=jakarta.activation
@@ -233,4 +246,14 @@ org.eclipse.persistence.platform.database=org.eclipse.persistence.platform.datab
 org.eclipse.persistence.sessions=org.eclipse.persistence.sessions
 org.eclipse.persistence.tools.schemaframework=org.eclipse.persistence.tools.schemaframework
 org.eclipse.persistence.transaction=org.eclipse.persistence.transaction
+
+com.sun.xml.internal.messaging.saaj.packaging.mime=com.sun.xml.messaging.saaj.packaging.mime
+com.sun.xml.internal.messaging.saaj.packaging.mime.internet=com.sun.xml.messaging.saaj.packaging.mime.internet
+com.sun.xml.internal.messaging.saaj.packaging.mime.util=com.sun.xml.messaging.saaj.packaging.mime.util
+com.sun.xml.internal.messaging.saaj.soap=com.sun.xml.messaging.saaj.soap
+com.sun.xml.internal.messaging.saaj.soap.dynamic=com.sun.xml.messaging.saaj.soap.dynamic
+com.sun.xml.internal.messaging.saaj.soap.name=com.sun.xml.messaging.saaj.soap.name
+com.sun.xml.internal.messaging.saaj.util=com.sun.xml.messaging.saaj.util
+com.sun.xml.internal.messaging.saaj.util.stax=com.sun.xml.messaging.saaj.util.stax
+com.sun.xml.internal.messaging.saaj.util.transform=com.sun.xml.messaging.saaj.util.transform
 
