Fixes the RequestProbe FAT to wait for server config update

--- a/dev/com.ibm.ws.request.probes_fat/publish/servers/ProbeServer/bootstrap.properties
+++ b/dev/com.ibm.ws.request.probes_fat/publish/servers/ProbeServer/bootstrap.properties
@@ -5,4 +5,4 @@ com.ibm.ws.kernel.launch.internal.Trace*=all:\
 com.ibm.ws.request.probe.*=all:\
 com.ibm.wsspi.request.probe.bci.*=all:\
 com.ibm.ws.request.probe.bci.internal.*=all:\
-com.ibm.ws.request.timing.manager.*=all
+com.ibm.ws.request.timing.*=all
