--- a/dev/com.ibm.ws.jdbc_fat_krb5/build.gradle
+++ b/dev/com.ibm.ws.jdbc_fat_krb5/build.gradle
@@ -23,7 +23,7 @@ dependencies {
                "org.testcontainers:postgresql:${testcontainersVersion}",
                "org.testcontainers:jdbc:${testcontainersVersion}"
   db2 'com.ibm.db2:jcc:11.1.4.4'
-  oracle 'com.oracle.ojdbc:ojdbc8_g:19.3.0.0'
+  oracle 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
   postgres 'org.postgresql:postgresql:42.2.5'
 }
 
