Update the xmlWS Tools

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -96,16 +96,47 @@ com.sun.xml.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
 com.sun.xml.internal.bind.defaultNamespaceRemap=org.glassfish.jaxb.defaultNamespaceRemap
 
 http\://java.sun.com/xml/ns/jaxb=https://jakarta.ee/xml/ns/jaxb
+http\://java.sun.com/xml/ns/jaxws=https://jakarta.ee/xml/ns/jaxws
 
 javax.jws.WebService=jakarta.jws.WebService
 javax.jws.HandlerChain=jakarta.jws.HandlerChain
-
+javax.xml.ws.Holder=jakarta.xml.ws.Holder
+javax.xml.ws.Service=jakarta.xml.ws.Service
+javax.xml.ws.Response=jakarta.xml.ws.Response
 javax.xml.ws.WebServiceProvider=jakarta.xml.ws.WebServiceProvider
 javax.xml.ws.soap.MTOM=jakarta.xml.ws.soap.MTOM
 javax.xml.ws.soap.Addressing=jakarta.xml.ws.soap.Addressing
+javax.xml.ws.spi.Provider=jakarta.xml.ws.spi.Provider
 javax.xml.ws.RespectBinding=jakarta.xml.ws.RespectBinding
 javax.xml.ws.BindingType=jakarta.xml.ws.BindingType
 javax.xml.ws.ServiceMode=jakarta.xml.ws.ServiceMode
+javax.xml.ws.wsaddressing.W3CEndpointReference=jakarta.xml.ws.wsaddressing.W3CEndpointReference
+javax.xml.ws.AsyncHandler=jakarta.xml.ws.AsyncHandler
+javax.xml.ws.FaultAction=jakarta.xml.ws.FaultAction
+javax.xml.ws.Action=jakarta.xml.ws.Action
+
+# xmlWS-3.0 MessageContext properties
+javax.xml.ws.addressing.context=jakarta.xml.ws.addressing.context
+javax.xml.ws.addressing.context.inbound=jakarta.xml.ws.addressing.context.inbound
+javax.xml.ws.addressing.context.outbound=jakarta.xml.ws.addressing.context.outbound
+javax.xml.ws.handler.message.outbound=jakarta.xml.ws.handler.message.outbound
+javax.xml.ws.binding.attachments.inbound=jakarta.xml.ws.binding.attachments.inbound
+javax.xml.ws.binding.attachments.outbound=jakarta.xml.ws.binding.attachments.outbound
+javax.xml.ws.wsdl.description=jakarta.xml.ws.wsdl.description
+javax.xml.ws.wsdl.service=jakarta.xml.ws.wsdl.service
+javax.xml.ws.wsdl.port=jakarta.xml.ws.wsdl.port
+javax.xml.ws.wsdl.interface=jakarta.xml.ws.wsdl.interface
+javax.xml.ws.wsdl.operation=jakarta.xml.ws.wsdl.operation
+javax.xml.ws.http.response.code=jakarta.xml.ws.http.response.code
+javax.xml.ws.http.request.headers=jakarta.xml.ws.http.request.headers
+javax.xml.ws.http.response.headers=jakarta.xml.ws.http.response.headers
+javax.xml.ws.http.request.method=jakarta.xml.ws.http.request.method
+javax.xml.ws.servlet.request=jakarta.xml.ws.servlet.request
+javax.xml.ws.servlet.response=jakarta.xml.ws.servlet.response
+javax.xml.ws.servlet.context=jakarta.xml.ws.servlet.context
+javax.xml.ws.http.request.querystring=jakarta.xml.ws.http.request.querystring
+javax.xml.ws.http.request.pathinfo=jakarta.xml.ws.http.request.pathinfo
+javax.xml.ws.reference.parameters=jakarta.xml.ws.reference.parameters
 
 com.sun.xml.bind.v2.ContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
 com.ibm.xml.xlxp2.jaxb.JAXBContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
