--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -8,6 +8,7 @@ ra.xml=jakarta-xml-dd.properties
 validation.xml=jakarta-xml-dd.properties
 web.xml=jakarta-xml-dd.properties
 web-fragment.xml=jakarta-xml-dd.properties
+webservices.xml=jakarta-xml-dd.properties
 UTService.xml=jakarta-userTransaction.properties
 TransactionManager.xml=jakarta-transactionManager.properties
 TransactionJavaColonHelper.xml=jakarta-userTransaction.properties
