Update to use ClassRule on the FATSuite
- Gets all the JAXWS 2.3 tests passing with using a ClassRule for
RepeatTests on the Suite instead of each individual tests.
- Also has the scaffolding to get the tests running wtih xmlWS 3.0.

--- a/dev/com.ibm.ws.jaxws.2.2.webcontainer_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxws.2.2.webcontainer_fat/build.gradle
@@ -96,3 +96,5 @@ task addRestConnector(type: Copy) {
 addRequiredLibraries {
   dependsOn addCXF, addSpring, addPureCXF, addRestConnector
 }
+
+addRequiredLibraries.dependsOn addJakartaTransformer
