--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -20,6 +20,7 @@ com.ibm.ws.transaction.services.TransactionSynchronizationRegistryService.xml=ja
 com.ibm.ws.transaction.services.UserTransactionService.xml=jakarta-userTransaction.properties
 com.ibm.ws.transport.iiop.transaction.TransactionSubsystemFactory.xml=jakarta-transactionManager.properties
 com.ibm.ws.webcontainer.v40.dd.xml=jakarta-servletVersion.properties
+com.ibm.ws.cdi.liberty.CDIRuntimeImpl.xml=jakarta-xml-CDIRuntimeImpl.properties
 com.ibm.ws.cdi.transaction.liberty.LibertyTransactionService.xml=jakarta-cdiLibertyTransactionService.properties
 com.ibm.ws.cdi.servletInitializer.xml=jakarta-xml-servletContainerInitializer.properties
 com.ibm.tx.jta.cdi.TransactionContextExtension.xml=jakarta-transactionContextExtension.properties
