--- a/dev/io.openliberty.microprofile.faulttolerance.3.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.faulttolerance.3.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
@@ -57,12 +57,12 @@
         <dependency>
             <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
             <artifactId>microprofile-fault-tolerance-tck</artifactId>
-            <version>3.0-RC2</version>
+            <version>3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.microprofile.apis</groupId>
+            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
             <artifactId>microprofile-fault-tolerance-api</artifactId>
-            <version>3.0-RC1</version>
+            <version>3.0</version>
             <scope>system</scope>
             <systemPath>${io.openliberty.org.eclipse.microprofile.faulttolerance.3.0}</systemPath>
         </dependency>
