--- a/dev/com.ibm.ws.jsfContainer_fat_2.3/build.gradle
+++ b/dev/com.ibm.ws.jsfContainer_fat_2.3/build.gradle
@@ -49,7 +49,7 @@ dependencies {
       'commons-beanutils:commons-beanutils:1.9.4',
       project(':io.openliberty.org.apache.commons.codec'),
       'javax.xml.bind:jaxb-api:2.3.0'
-    mojarra30 'org.glassfish:jakarta.faces:3.0.0-RC3'
+    mojarra30 'org.glassfish:jakarta.faces:3.0.1'
     myfaces30 'org.apache.myfaces.core:myfaces-api:3.0.0',
       'org.apache.myfaces.core:myfaces-impl:3.0.0'
     }
