--- a/dev/io.openliberty.xmlws.3.0.internal.tools.wsgen/.project
+++ b/dev/io.openliberty.xmlws.3.0.internal.tools.wsgen/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>io.openliberty.xmlws.3.0.internal.tools.wsgen</name>
+	<name>io.openliberty.xmlWS.3.0.internal.tools.wsgen</name>
 	<comment></comment>
 	<projects>
 	</projects>
