--- a/dev/com.ibm.ws.transaction.cloud_fat.mssqlserver/build.gradle
+++ b/dev/com.ibm.ws.transaction.cloud_fat.mssqlserver/build.gradle
@@ -8,6 +8,8 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
+
 configurations {
     sqlserver
 }
@@ -16,17 +18,9 @@ configurations {
 dependencies {
   requiredLibs project(":com.ibm.ws.transaction.cloud_fat.1"),
                'commons-logging:commons-logging:1.1.3',
-               'org.testcontainers:testcontainers:1.14.0',
-               'org.testcontainers:database-commons:1.14.0',
-               'org.testcontainers:jdbc:1.14.0',
-               'org.testcontainers:mssqlserver:1.14.0',
-               'org.apache.commons:commons-compress:1.19',
-               'org.rnorth.duct-tape:duct-tape:1.0.7',
-               'org.rnorth.visible-assertions:visible-assertions:2.1.2',
-               'org.rnorth:tcp-unix-socket-proxy:1.0.2',
-               'net.java.dev.jna:jna:5.2.0',
-               'org.slf4j:slf4j-api:1.7.7',
-               'org.slf4j:slf4j-jdk14:1.7.7'
+               "org.testcontainers:database-commons:${testcontainersVersion}",
+               "org.testcontainers:jdbc:${testcontainersVersion}",
+               "org.testcontainers:mssqlserver:${testcontainersVersion}"
   sqlserver 'com.microsoft.sqlserver:mssql-jdbc:8.2.1.jre8'
 }
 
