--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -24,8 +24,23 @@ on:
 env:
   LANG: en_US.UTF-8
 jobs:
+  validate: #Perform validation before any other jobs run.  If we fail validation, don't run anything else.
+    name: validation
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 50
+    - name: Validate copyright headers
+      if: "github.event_name == 'pull_request'"
+      run: .github/workflow-scripts/validate-copyright-headers.sh
+    - name: Validate new tests
+      # Probably should only do this for PRs.  But for now run on schedule so we can catch tests suites that get merged incorrectly
+      # if: "github.event_name == 'pull_request'"
+      run: .github/workflow-scripts/validate-new-tests.sh
   build: #Main build always done on linix run in parallel to setup and unit-test
     name: Build Open Liberty
+    needs: validate
     runs-on: ubuntu-18.04
     outputs:
       test-matrix: ${{ steps.gen-params.outputs.test-matrix }}
@@ -40,12 +55,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 50
-    - name: Validate copyright headers
-      if: "github.event_name == 'pull_request'"
-      run: .github/workflow-scripts/validate-copyright-headers.sh
-    - name: Validate new tests
-      if: "github.event_name == 'pull_request'"
-      run: .github/workflow-scripts/validate-new-tests.sh
     - name: Set up Java
       uses: joschi/setup-jdk@v2
       with:
@@ -93,6 +102,7 @@ jobs:
         path: openliberty-image.zip
   unit_tests: #Unit tests always run linux and java 11
     name: Unit Tests
+    needs: validate
     runs-on: ubuntu-18.04
     timeout-minutes: 60
     # Do not run on draft PRs
@@ -147,7 +157,7 @@ jobs:
         numFailures: 100 # Truncate number of failures so we don't run out of annoations.
   fat_tests: #Runs parallel jobs for each FAT category. JDK version and OS are dependent on setup
     name: FAT Tests - ${{matrix.category}}
-    needs: build
+    needs: [validate, build]
     runs-on: ${{ needs.build.outputs.test-os }}
     # Do not run on draft PRs
     if: "github.event_name != 'pull_request' || ( \
