Move javabatch tool to auto feature, update serverConfig and explore to proper private feature, remove ossc.xml

--- a/dev/com.ibm.websphere.appserver.features/build.gradle
+++ b/dev/com.ibm.websphere.appserver.features/build.gradle
@@ -308,7 +308,7 @@ task publishAdminCenter {
         into buildImage.file('wlp/lib/features')
     }
     copy {
-        from new File(projectDir, 'visibility/private/com.ibm.websphere.appserver.adminCenter.tool.javaBatch-1.0/resources')
+        from new File(projectDir, 'visibility/auto/com.ibm.websphere.appserver.adminCenter.tool.javaBatch-1.0/resources')
         into buildImage.file('wlp/lib/features')
     }
     copy {
