Migrate additional JPA Query fat test cases.
Signed-off-by: Joe Grassel <jgrassel@us.ibm.com>

--- a/dev/com.ibm.ws.jpa_spec10_query_fat/build.gradle
+++ b/dev/com.ibm.ws.jpa_spec10_query_fat/build.gradle
@@ -30,4 +30,5 @@ addRequiredLibraries {
   dependsOn copyDatabaseRotationDrivers
   dependsOn addJakartaTransformer
   dependsOn addJPAFATTools
+  dependsOn addTestcontainers
 }
