Add repeat action rules for EJB

--- a/dev/com.ibm.ws.jaxws.ejb_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxws.ejb_fat/build.gradle
@@ -31,3 +31,5 @@ task addJunitdependencies(type: Copy) {
 addRequiredLibraries {
   dependsOn addJunitdependencies
 }
+
+addRequiredLibraries.dependsOn addJakartaTransformer
