--- a/dev/com.ibm.ws.couchdb_fat/build.gradle
+++ b/dev/com.ibm.ws.couchdb_fat/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019,2020 IBM Corporation and others.
+ * Copyright (c) 2019,2021 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,7 +10,7 @@
  *******************************************************************************/
 
 configurations {
-  couchdb
+  couchdb {transitive = false}
 }
 
 dependencies {
@@ -19,7 +19,7 @@ dependencies {
           'commons-io:commons-io:2.6',
           'commons-logging:commons-logging:1.1.1',
           project(':com.ibm.ws.org.apache.httpcomponents'),
-          'org.apache.httpcomponents:httpclient-cache:4.3.1',
+          'org.apache.httpcomponents:httpclient-cache:4.5.13',
           'org.ektorp:org.ektorp:1.5.0',
           'org.slf4j:slf4j-api:1.7.7',
           'org.slf4j:slf4j-jdk14:1.7.7'
