--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -1839,7 +1839,7 @@
     <dependency>
       <groupId>org.eclipse.microprofile.jwt</groupId>
       <artifactId>microprofile-jwt-auth-api</artifactId>
-      <version>1.2-RC1</version>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.microprofile.lra</groupId>
