--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -34,10 +34,10 @@ jobs:
     - name: Validate copyright headers
       if: "github.event_name == 'pull_request'"
       run: .github/workflow-scripts/validate-copyright-headers.sh
-    - name: Validate new tests
+    - name: Validate tests
       # Probably should only do this for PRs.  But for now always run so we can catch tests suites that get merged incorrectly
       # if: "github.event_name == 'pull_request'"
-      run: .github/workflow-scripts/validate-new-tests.sh
+      run: .github/workflow-scripts/validate-tests.sh
   build: #Main build always done on linix run in parallel to setup and unit-test
     name: Build Open Liberty
     needs: validate
