Add the BindingProvider properties to the direct transform list
- static final String have their value put into byte code instead of the
reference, so need to include them in the direct string transform
because there class reference isn't in the byte code any longer.

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -146,6 +146,14 @@ javax.xml.ws.http.request.querystring=jakarta.xml.ws.http.request.querystring
 javax.xml.ws.http.request.pathinfo=jakarta.xml.ws.http.request.pathinfo
 javax.xml.ws.reference.parameters=jakarta.xml.ws.reference.parameters
 
+#xmlWS BindingProvider properties
+javax.xml.ws.security.auth.username=jakarta.xml.ws.security.auth.username
+javax.xml.ws.security.auth.password=jakarta.xml.ws.security.auth.password
+javax.xml.ws.service.endpoint.address=jakarta.xml.ws.service.endpoint.address
+javax.xml.ws.session.maintain=jakarta.xml.ws.session.maintain
+javax.xml.ws.soap.http.soapaction.use=jakarta.xml.ws.soap.http.soapaction.use
+javax.xml.ws.soap.http.soapaction.uri=jakarta.xml.ws.soap.http.soapaction.uri
+
 com.sun.xml.bind.v2.ContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
 com.ibm.xml.xlxp2.jaxb.JAXBContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
 
