Minor updates to MP Rest Client feature / tests
- alphabetize the feature ordering
- update test timeouts for slower build machines
- include local IBM reactive streams bundle in TCK pom.xml

--- a/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
@@ -79,6 +79,14 @@
         </dependency>
 
         <dependency>
+            <groupId>com.ibm.ws.org.reactivestreams</groupId>
+            <artifactId>reactive-streams</artifactId>
+            <version>${reactive.streams.version}</version>
+            <scope>system</scope>
+            <systemPath>${com.ibm.ws.org.reactivestreams.reactive-streams.1.0_}</systemPath>
+        </dependency>
+
+        <dependency>
             <groupId>com.ibm.ws.org.apache.cxf</groupId>
             <artifactId>cxf.rt.rs.mp.client</artifactId>
             <version>3.3.3.20190529</version>
